packages/rescript-path-rebuild/tests/__snapshots__/Main.test.bs.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Absolute path 1`] = `"An absolute path cannot be used as a source path"`;

exports[`Parse errors {-2}.js\\ 1`] = `
"{-2}.js\\\\
        ^
Unexpected end of string. Expected a character after the escape symbol"
`;

exports[`Parse errors foo/{-2.. 1`] = `
"foo/{-2..
         ^
Unexpected end of string. Did you forget to close a range?"
`;

exports[`Parse errors test/{-1..-2}/{-2}.js 1`] = `
"test/{-1..-2}/{-2}.js
            ^
Bad range limits: -1..-2"
`;

exports[`Parse errors test/{-1..1}/{-2}.js 1`] = `
"test/{-1..1}/{-2}.js
           ^
Bad range limits: -1..1"
`;

exports[`Parse errors test/{0a}/{-2}.js 1`] = `
"test/{0a}/{-2}.js
        ^
Bad range limit: 0a"
`;

exports[`Parse errors test/{1...2}/{-2}.js 1`] = `
"test/{1...2}/{-2}.js
         ^
Unexpected . symbol"
`;

exports[`Parse errors test/{1..0}/{-2}.js 1`] = `
"test/{1..0}/{-2}.js
          ^
Bad range limits: 1..0"
`;

exports[`Parse errors test/{1..0a}/{-2}.js 1`] = `
"test/{1..0a}/{-2}.js
           ^
Bad range limit: 0a"
`;

exports[`Parse errors test/{1..2.1}/{-2}.js 1`] = `
"test/{1..2.1}/{-2}.js
          ^
Unexpected . symbol"
`;

exports[`Parse errors test/{1.2}/{-2}.js 1`] = `
"test/{1.2}/{-2}.js
        ^
Unexpected character: 2. Was expecting a . symbol"
`;

exports[`Parse errors test/{1/..2}/{-2}.js 1`] = `
"test/{1/..2}/{-2}.js
       ^
Unexpected / symbol inside a range"
`;

exports[`Parse errors test/{1\\..2}/{-2}.js 1`] = `
"test/{1\\\\..2}/{-2}.js
       ^
Unexpected escape symbol inside a range"
`;

exports[`Parse errors test/{1{..2}/{-2}.js 1`] = `
"test/{1{..2}/{-2}.js
       ^
Unexpected { symbol inside a range"
`;

exports[`Parse errors test/{2..1}/{-2}.js 1`] = `
"test/{2..1}/{-2}.js
          ^
Bad range limits: 2..1"
`;

exports[`Parse errors test}/{1..2}/{-2}.js 1`] = `
"test}/{1..2}/{-2}.js
    ^
Unexpected } symbol"
`;
